fix overflow issue in dropdown styles

--- a/frontend/src/app/column-specifying/column-specifying.component.css
+++ b/frontend/src/app/column-specifying/column-specifying.component.css
@@ -63,55 +63,56 @@ button:disabled:hover {
   background-color: #435869;
 }
 
-::ng-deep .mat-mdc-form-field-focus-overlay {
+:host ::ng-deep .mat-mdc-form-field-focus-overlay {
   background-color: transparent !important;
 }
 
-mat-form-field {
+:host mat-form-field {
   min-width: 85px !important;
   width: 7vw !important;
   max-width: 250px !important;
 }
 
-::ng-deep .mdc-text-field {
+:host ::ng-deep .mdc-text-field {
   height: 38px !important;
   border-bottom: 1px solid #252e34 !important;
+  background-color: transparent !important;
 }
 
-::ng-deep .mat-mdc-form-field-infix {
+:host ::ng-deep .mat-mdc-form-field-infix {
   top: -9px;
 }
 
-::ng-deep div.mat-mdc-select-panel {
+:host ::ng-deep div.mat-mdc-select-panel {
   padding: 0 !important;
   box-shadow: none !important;
   border: 1px solid #dee2e6 !important;
 }
 
-::ng-deep div.mat-mdc-select-panel .mat-mdc-option {
+:host ::ng-deep div.mat-mdc-select-panel .mat-mdc-option {
   color: #435869;
   background-color: white !important;
 }
 
-::ng-deep div.mat-mdc-select-panel .mat-mdc-option:hover {
+:host ::ng-deep div.mat-mdc-select-panel .mat-mdc-option:hover {
   background-color: #f4f7fb !important;
 }
 
-::ng-deep .mdc-line-ripple {
+:host ::ng-deep .mdc-line-ripple {
   display: none;
 }
 
-::ng-deep .mat-mdc-select-value-text {
+:host ::ng-deep .mat-mdc-select-value-text {
   color: white;
   font-weight: 500;
 }
 
-::ng-deep .mat-mdc-select-placeholder {
+:host ::ng-deep .mat-mdc-select-placeholder {
   color: #b9d3e7 !important;
   font-style: italic;
 }
 
-::ng-deep .mat-mdc-form-field-subscript-wrapper {
+:host ::ng-deep .mat-mdc-form-field-subscript-wrapper {
   display: none;
 }
 
